# DMIS_UpdatedVersion

./: .coderabbit.yaml  .env.example  .gitignore  .gitlab-ci.yml  .mcp.example.json  .mcp.json  .replit  AGENTS.md  CLAUDE.md  CLAUDE_CODE_SUPPLY_REPLENISHMENT_GUIDE.md  CODEX_SUPPLY_REPLENISHMENT_GUIDE.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  MANIFEST.in  README.md  README_migration.md  TEST_SUMMARY_EP02_2026-02-13.md  bandit.yml  database_dump_2025-12-02.sql  database_dump_corrections.sql  database_dump_pgadmin (new).sql  fix_sequences.sql  manifest.yml  pyproject.toml  replit.md  requirements.txt  semgrep.yml  workspace_post_restart.yml
.claude/: CLAUDE.md  settings.json  settings.local.json
.playwright-mcp/: page-2026-03-31T18-13-36-454Z.yml  page-2026-03-31T18-13-50-672Z.yml  page-2026-03-31T18-14-15-689Z.yml  page-2026-03-31T18-14-34-413Z.yml  page-2026-03-31T18-14-57-227Z.yml
app/: __init__.py  main.py  settings.py  wsgi.py
artifacts/: brief-c-mock-backend.js
attached_assets/: DMIS_TEST_DATA_README.md  DRIMS_Requirements_Document_1762917808555.md  DRIMS_UI_Navigation_Prompt_1762954753108.md  EP02_SUPPLY_REPLENISHMENT_SCHEMA.sql  HADR Relief_Aid_Tracking_Document_1764618090963.xlsx  IMPLEMENTATION_SUMMARY_1762917808555.md  MLSS Warehouse Operations -  November 28, 2025 1 (2)_1764433305792.xlsx  Pasted--Relief-items-e-g-mattresses-tarpaulin-flour-rice-etc-create-table-item-item-id-int-1763384076405_1763384076405.txt  Pasted--div-class-row-g-3-align-items-end-div-class-col-md-3--1764187412304_1764187412305.txt  Pasted-Final-Phase-4-step-auditability-governance-Align-loggin_1764687043465.txt  Pasted-Now-address-Information-Exposure-Through-Error-Messages_1764681459433.txt  Pasted-Now-address-configuration-hardening-for-DMIS-environmen_1764685573807.txt  Pasted-TypeError-TypeError-not-supported-between-instances-of-decimal-Decimal-and-list-Traceb-1763130079314_1763130079315.txt  Pasted-create-table-agency-agency-id-integer-not-null-generated-by-default-as-identity--1762969597860_1762969597861.txt  Pasted-create-table-reliefrqst-reliefrqst-id-integer-not-null-generated-by-default-as-ide-1763057759161_1763057759161.txt  Pasted-peError-TypeError-bool-object-is-not-callable-Traceback-most-recent-call-last-File--1763129091342_1763129091344.txt  (+11 more)
(+977 files in other folders)
