[project]
name = "goj_dmis_legacy_flask_runtime"
version = "0.0.0"
dynamic = ["readme", "dependencies"]

requires-python = ">=3.11"
keywords = ["legacy", "rollback-only", "retired-runtime"]
# license = "GPL3"
description = "Legacy rollback-only Flask runtime retained for temporary DMIS traceability; not the Angular + Django production artifact."
classifiers = [
    "Programming Language :: Python :: 3",
]

authors = [
    {name = "ICT Authority, Jamaica", email = "support@icta.gov.jm" },
    {name = "Winston Bowen", email = "winston.bowen@icta.gov.jm" },
    {name = "Lincoln Brown", email = "lincoln.brown@icta.gov.jm" },
]

[build-system]
requires = ["setuptools"]  # , "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "replit.md"], content-type = "text/x-markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*",]  # legacy rollback-only Flask package; not used by the live release bundle
namespaces = false
